# TrueMemory

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  constraints.txt  install.sh  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
_pr_diffs/: pr_420.diff
benchmarks/beam/: bench_truememory_pro_beam1m.py
benchmarks/gate_eval/: run_weight_threshold_sweep.py
benchmarks/gate_eval/results/: category_feature_analysis.json  encoding_salience_variants.json  l3_baseline_on_gatelocomo.json
benchmarks/locomo/scripts/: bench_truememory_base.py  bench_truememory_edge.py  bench_truememory_pro.py
docs/: architecture.md  cli.md  compatibility.md  env-vars.md  migration.md  python-api.md  setup-chatgpt.md  setup-codex.md  setup-cursor.md  setup-gemini.md  setup-hermes.md  setup-kimi.md  setup-openclaw.md
docs/guides/: debugging.md
tests/: conftest.py  test_chatgpt_adapter.py  test_ci_isolation.py  test_cli_help.py  test_codex_adapter.py  test_configure_reembed.py  test_configure_tier_persist.py  test_consolidation_gaps.py  test_encoding_gate_category_threshold.py  test_encoding_gate_compression_novelty.py  test_encoding_gate_pe_floor.py  test_encoding_gate_threshold.py  test_encoding_gate_weight_env.py  test_encoding_salience.py  test_health_stats.py  test_hermes_adapter.py  test_issue_455_consolidation_mcp.py  test_issue_460_warm_search.py  test_issue_465_qwen3_nan_async.py  test_issue_489_mps_safety.py  test_issue_492_nan_validation.py  test_issue_495_case_normalize.py  test_issue_559_recall_cache.py  test_issue_560_scanner_watermark.py  test_issue_566_forget_always_load.py  test_issue_575_chatgpt_safety.py  test_issue_577_model_server_oom.py  test_issue_578_payload_cap.py  test_issue_630_search_supplement_merge.py  test_issue_643_path_replace.py  test_issue_646_model_server.py  test_issue_649_dedup_gate_hygiene.py  test_issue_652_extraction.py  test_issue_684_db_reconnect.py  test_issue_685_forget_derived.py  test_issue_691_atomic_writes.py  test_issue_693_store_ratelimit.py  test_kimi_adapter.py  test_l0_style_vector.py  test_l5_surprise_rerank.py  (+10 more)
tests/ingest/: test_backlog_drain_no_unlink_422.py  test_cli_preflight.py  test_dedup_word_overlap.py  test_integration.py  test_issue_576_dedup_markers.py  test_models_retry.py  test_onboarding.py  test_recall_debounce.py  test_robustness_fixes.py  test_stop_hook_safety.py
truememory/: __init__.py  agentic_search.py  client.py  consolidation.py  engine.py  fts_search.py  hybrid.py  hyde.py  l5_boost.py  mcp_server.py  model_client.py  model_server.py  personality.py  personality_style_vec.py  reranker.py  salience.py  search_quality.py  storage.py  telemetry.py  vector_search.py
truememory/data/: encoding_salience_weights.json
truememory/hooks/: core.py  registry.py
truememory/hooks/adapters/: base.py  chatgpt.py  codex.py  cursor.py  gemini.py  hermes.py  kimi.py  openclaw.py
truememory/hooks/templates/openclaw/: index.js  openclaw.plugin.json  package.json
truememory/ingest/: cli.py  dedup.py  encoding_gate.py  encoding_salience.py  extractor.py  markers.py  pipeline.py  transcript.py
truememory/ingest/hooks/: _shared.py  compact.py  session_start.py  user_prompt_submit.py
truememory/tier_switch/: manager.py  throttler.py
