[build-system]
requires = ["hatchling>=1.18,<2.0"]
build-backend = "hatchling.build"

[project]
name = "truememory"
version = "0.5.0"
description = "SOTA-level agent memory at zero infrastructure cost."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "@Building_Josh" },
]
keywords = ["memory", "ai", "agents", "llm", "rag", "sqlite", "locomo", "mcp", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "model2vec>=0.6.0,<1.0",
    "sqlite-vec>=0.1.0,<1.0",
    "numpy>=1.24.0,<3.0",
    # mcp[cli] and httpx are required by truememory.mcp_server, which is the
    # primary entry point of this package (`truememory-mcp`). Previously these
    # lived in the `[mcp]` optional extra, which caused `pip install truememory
    # && truememory-mcp --setup` to crash with ModuleNotFoundError on first run.
    # Moved to core in 0.3.0.
    "mcp[cli]>=1.0.0,<2.0",
    "httpx>=0.27.0,<1.0",
]

[project.optional-dependencies]
# "gpu" and "reranker" name the same stack — one alias to keep them in sync.
reranker = ["sentence-transformers>=3.0.0,<6.0", "torch>=2.0.0,<3.0"]
gpu = ["truememory[reranker]"]
agentic = ["anthropic>=0.80.0,<1.0"]
dev = ["pytest>=7.0,<10.0", "ruff>=0.4,<1.0", "build>=1.2,<2.0", "twine>=5.0,<7.0"]
all = ["truememory[gpu,reranker,agentic]"]

[project.scripts]
truememory-mcp = "truememory.mcp_server:main"
truememory-ingest = "truememory.ingest.cli:main"

[project.urls]
Homepage = "https://github.com/buildingjoshbetter/TrueMemory"
Repository = "https://github.com/buildingjoshbetter/TrueMemory"
Documentation = "https://github.com/buildingjoshbetter/TrueMemory#readme"
Issues = "https://github.com/buildingjoshbetter/TrueMemory/issues"
Changelog = "https://github.com/buildingjoshbetter/TrueMemory/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
# Default ruleset is fine for the core codebase. Per-file ignores below.

[tool.ruff.lint.per-file-ignores]
# __init__.py files re-export submodule symbols as the public API. Ruff
# flags these as F401 ("imported but unused") because they aren't consumed
# inside the file itself — but they ARE the file's purpose. Standard
# idiom is to ignore F401 for __init__ modules.
"__init__.py" = ["F401"]

[tool.hatch.build.targets.wheel]
packages = ["truememory"]

# CLAUDE_TEMPLATE.md lives inside the package at truememory/ingest/CLAUDE_TEMPLATE.md
# so it's auto-included in the wheel — no force-include needed.

[tool.hatch.build.targets.sdist]
# Explicit exclude list so the sdist stays tight (~400KB compressed instead of 36MB).
# Without these, hatchling ships every untracked non-gitignored file including
# _working/ (149MB of paper drafts, audit logs, bench archives).
exclude = [
    "/_working",
    "/.claude",
    "/dist",
    "/build",
    "/.venv",
    "/.venv*",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.github",
    "/install.sh",
    "/assets/charts/*.html",
    "/assets/charts/*.png",
    # Hunter F36: exclude all benchmarks from sdist (used to exclude only the
    # 44MB locomo10.json and results/; the Modal bench scripts still shipped,
    # amplifying doc-drift findings like F13/F18 to PyPI source-download users).
    # Users who want to reproduce benchmarks clone the repo.
    "/benchmarks",
    "*.pyc",
    "__pycache__",
    ".DS_Store",
]
